[workspace.package]
edition = "2024"
rust-version = "1.89" # To align with the rust-toolchain.toml

[workspace]
members = [
    "crates/brioche",
    "crates/brioche-core",
    "crates/brioche-pack",
    "crates/brioche-test-support",
]
resolver = "3"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cognitive_complexity = "allow"
future_not_send = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
significant_drop_tightening = "allow"
string_lit_as_bytes = "allow"
too_many_lines = "allow"
allow_attributes = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
if_not_else = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
large_const_arrays = "warn"
large_futures = "warn"
manual_assert = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
must_use_candidate = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_value = "warn"
option_as_ref_cloned = "warn"
print_stderr = "warn"
print_stdout = "warn"
ref_option = "warn"
ref_option_ref = "warn"
semicolon_if_nothing_returned = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unused_async = "warn"
unused_self = "warn"
unused_trait_names = "warn"
used_underscore_binding = "warn"
used_underscore_items = "warn"
unnecessary_semicolon = "warn"

[profile.dev]
debug = "limited"

# Optimize some dependencies in dev mode to speed up tests
[profile.dev.package.swc_ecma_ast]
opt-level = 2
[profile.dev.package.swc_ecma_visit]
opt-level = 2
[profile.dev.package.swc_ecma_transforms_base]
opt-level = 2
[profile.dev.package.swc_ecma_lexer]
opt-level = 2
[profile.dev.package.swc_ecma_parser]
opt-level = 2
[profile.dev.package.swc_ecma_codegen]
opt-level = 2
[profile.dev.package.swc_common]
opt-level = 2
