[workspace.package]
edition = "2024"
rust-version = "1.90" # To align with the rust-toolchain.toml

[workspace]
members = [
    "crates/brioche",
    "crates/brioche-core",
    "crates/brioche-pack",
    "crates/brioche-test-support",
]
resolver = "3"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cognitive_complexity = "allow"
future_not_send = "allow"
implicit_hasher = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
significant_drop_tightening = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
allow_attributes = "warn"
dbg_macro = "warn"
large_const_arrays = "warn"
print_stderr = "warn"
print_stdout = "warn"
unused_trait_names = "warn"

[profile.dev]
debug = "limited"

# Optimize some dependencies in dev mode to speed up tests
[profile.dev.package.swc_ecma_ast]
opt-level = 2
[profile.dev.package.swc_ecma_visit]
opt-level = 2
[profile.dev.package.swc_ecma_transforms_base]
opt-level = 2
[profile.dev.package.swc_ecma_lexer]
opt-level = 2
[profile.dev.package.swc_ecma_parser]
opt-level = 2
[profile.dev.package.swc_ecma_codegen]
opt-level = 2
[profile.dev.package.swc_common]
opt-level = 2
