[workspace.package]
edition = "2024"
rust-version = "1.93" # To align with the rust-toolchain.toml

[workspace]
members = [
    "crates/brioche",
    "crates/brioche-core",
    "crates/brioche-pack",
    "crates/brioche-test-support",
]
resolver = "3"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cognitive_complexity = "allow"
future_not_send = "allow"
implicit_hasher = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
significant_drop_tightening = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
allow_attributes = "warn"
dbg_macro = "warn"
large_const_arrays = "warn"
print_stderr = "warn"
print_stdout = "warn"
unused_trait_names = "warn"

[profile.dev]
debug = "limited"

[profile.release]
strip = "debuginfo"
