[package]
name = "brioche-core"
version = "0.1.4"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
assert_matches = "1.5.0"
async-compression = { version = "0.4.18", features = ["tokio", "bzip2", "gzip", "xz", "zstd"] }
async-recursion = "1.1.1"
biome_formatter = "0.5.7"
biome_js_formatter = "0.5.7"
biome_js_parser = "0.5.7"
biome_js_syntax = "0.5.7"
biome_rowan = "0.5.7"
blake3 = "1.5.5"
brioche-pack = { path = "../brioche-pack" }
bstr = { version = "1.11.3", features = ["serde"] }
cfg-if = "1.0.0"
console-subscriber = "0.4.1"
debug-ignore = "1.0.5"
deno_ast = { version = "0.44.0", features = ["transpiling"] }
deno_core = "0.328.0"
directories = "6.0.0"
futures = "0.3.31"
globset = "0.4.15"
hex = "0.4.3"
joinery = "3.1.0"
json-canon = "0.1.3"
lazy_format = "2.0.3"
nix = { version = "0.29.0", features = ["user"] }
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27.0", default-features = false, features = ["http-proto", "reqwest-rustls"] }
opentelemetry-semantic-conventions = "0.27.0"
pathdiff = "0.2.3"
regex = "1.11.1"
relative-path = { version = "1.9.3", features = ["serde"] }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "zstd", "json", "stream"] }
reqwest-middleware = { version = "0.4.0", features = ["json"] }
reqwest-retry = "0.7.0"
rust-embed = { version = "8.5.0", features = ["debug-embed", "interpolate-folder-path", "include-exclude"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_v8 = "0.237.0"
serde_with = { version = "3.12.0", features = ["hex"] }
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "json"] }
strum = { version = "0.26.3", features = ["derive"] }
superconsole = "0.2.0"
thiserror = "2.0.11"
tick-encoding = "0.1.3"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.13", features = ["compat", "io-util", "rt"] }
toml = "0.8.19"
tower-lsp = "0.20.0"
tracing = "0.1.41"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "tracing-log"] }
ulid = "1.1.4"
url = { version = "2.5.4", features = ["serde"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"
petgraph = "0.7.1"
wax = { version = "0.6.0", default-features = false }
gix = { version = "0.70.0", features = ["blocking-network-client", "blocking-http-transport-reqwest"] }
tar = "0.4.43"
num_enum = "0.7.3"
jiff = { version = "0.1.16", features = ["serde"] }
zstd-framed = { version = "0.1.1", features = ["tokio"] }
object_store = "0.11.2"

[dev-dependencies]
brioche-test-support = { path = "../brioche-test-support" }
divan = "0.1.17"
mockito = "1.6.1"
pretty_assertions = "1.4.1"
zstd = "0.13.2"

[target.'cfg(target_os = "linux")'.dependencies]
libmount = "0.1.15"
unshare = { git = "https://github.com/brioche-dev/unshare.git" }

[[bench]]
name = "bake"
harness = false

[[bench]]
name = "blob"
harness = false

[[bench]]
name = "directory"
harness = false

[[bench]]
name = "input"
harness = false

[lints]
workspace = true
