[package]
name = "brioche-core"
version = "0.1.6"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
async-compression = { version = "0.4.37", features = [
    "tokio",
    "bzip2",
    "gzip",
    "xz",
    "zstd",
] }
async-recursion = "1.1.1"
async-trait = "0.1.89"
aws-config = "1.8.12"
aws-credential-types = "1.2.11"
aws-types = "1.3.11"
biome_console = "=0.5.7"
biome_deserialize = "=0.5.7"
biome_deserialize_macros = "=0.5.7"
biome_diagnostics = "=0.5.7"
biome_diagnostics_categories = "=0.5.7"
biome_diagnostics_macros = "=0.5.7"
biome_formatter = "=0.5.7"
biome_js_factory = "=0.5.7"
biome_js_formatter = "=0.5.7"
biome_js_parser = "=0.5.7"
biome_js_syntax = "=0.5.7"
biome_json_factory = "=0.5.7"
biome_json_parser = "=0.5.7"
biome_json_syntax = "=0.5.7"
biome_markup = "=0.5.7"
biome_parser = "=0.5.7"
biome_rowan = "=0.5.7"
biome_text_edit = "=0.5.7"
biome_text_size = "=0.5.7"
biome_unicode_table = "=0.5.7"
blake3 = "1.8.3"
brioche-pack = { path = "../brioche-pack" }
bstr = { version = "1.12.1", features = ["serde"] }
bytesize = "2.3.1"
cfg-if = "1.0.4"
console-subscriber = "0.5.0"
debug-ignore = "1.0.5"
deno_ast = { version = "0.52.0", features = ["transpiling"] }
deno_core = "0.380.0"
deno_error = "0.7.3"
directories = "6.0.0"
fastcdc = { version = "3.2.1", features = ["tokio"] }
futures = "0.3.31"
gix = { version = "0.77.0", features = [
    "blocking-network-client",
    "blocking-http-transport-reqwest",
] }
globset = "0.4.18"
hex = "0.4.3"
http = "1.4.0"
jiff = { version = "0.2.18", features = ["serde"] }
joinery = "3.1.0"
json-canon = "0.1.3"
lazy_format = "2.0.3"
nix = { version = "0.30.1", features = ["user"] }
num_enum = "0.7.5"
object_store = { version = "0.13.0", features = [
    "aws",
    "http",
] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = [
    "logs",
    "trace",
    "http-proto",
    "reqwest-blocking-client",
    "reqwest-rustls",
] }
opentelemetry-appender-tracing = { version = "0.31.1", features = ["experimental_use_tracing_span_context"] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["logs", "trace", "rt-tokio"] }
pathdiff = "0.2.3"
pem-rfc7468 = { version = "1.0.0", features = ["std"] }
petgraph = "0.8.3"
pin-project-lite = "0.2.16"
regex = "1.12.2"
relative-path = { version = "2.0.1", features = ["serde"] }
reqwest = { version = "0.13.1", default-features = false, features = [
    "json",
    "query",
    "rustls",
    "stream",
    "zstd",
] }
reqwest-middleware = { version = "0.5.0", features = ["json", "query"] }
reqwest-retry = "0.9.0"
rust-embed = { version = "8.11.0", features = [
    "debug-embed",
    "interpolate-folder-path",
    "include-exclude",
] }
rustls-native-certs = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_v8 = "0.289.0"
serde_with = { version = "3.16.1", features = ["hex"] }
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "migrate",
    "json",
] }
strum = { version = "0.27.2", features = ["derive"] }
superconsole = "0.2.0"
tar = "0.4.44"
thiserror = "2.0.17"
tick-encoding = "0.1.3"
tokio = { version = "1.49.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.18", features = ["compat", "io-util", "rt"] }
toml = "0.9.11"
tower-lsp = "0.20.0"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "json",
    "tracing-log",
] }
ulid = "1.2.1"
url = { version = "2.5.8", features = ["serde"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"
wax = { version = "0.6.0", default-features = false }
zip = { version = "7.1.0", default-features = false, features = [
    "bzip2",
    "deflate",
    "deflate64",
    "lzma",
    "zstd",
] }
zstd = "0.13.3"
zstd-framed = { version = "0.1.1", features = ["tokio"] }
humantime-serde = "1.1.1"
humantime = "2.3.0"

[dev-dependencies]
assert_matches = "1.5.0"
aws-runtime = "1.5.18"
brioche-test-support = { path = "../brioche-test-support" }
deno_core = { version = "0.380.0", features = [
    # For tests, this feature should be enabled to resolve a segfault that
    # can occur if V8 detects the `pki` CPU flag. See this issue:
    # https://github.com/denoland/deno_core/issues/1091
    "unsafe_use_unprotected_platform",
] }
divan = "0.1.21"
indoc = "2.0.7"
mockito = "1.7.1"
pretty_assertions = "1.4.1"
tempfile = "3.24.0"

[target.'cfg(target_os = "linux")'.dependencies]
libmount = "0.1.15"
unshare = { git = "https://github.com/brioche-dev/unshare.git" }

[[bench]]
name = "bake"
harness = false

[[bench]]
name = "blob"
harness = false

[[bench]]
name = "directory"
harness = false

[[bench]]
name = "input"
harness = false

[lints]
workspace = true
