[package]
name = "brioche-pack"
version = "0.1.6-rc.3"
edition.workspace = true
rust-version.workspace = true

[dependencies]
bincode = { version = "2.0.1" }
bstr = { version = "1.12.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.15.1" }
thiserror = "2.0.17"
tick-encoding = "0.1.3"

[lints]
workspace = true
