[package]
name = "brioche-test-support"
version = "0.1.5"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
brioche-core = { path = "../brioche-core" }
bstr = "1.12.0"
directories = "6.0.0"
futures = "0.3.31"
hex = "0.4.3"
mockito = "1.7.0"
object_store = { git = "https://github.com/apache/arrow-rs-object-store.git", rev = "8a7bc6e9ef94f889841620db597805728dfb37ad" }
reqwest = "0.12.22"
reqwest-middleware = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tempfile = "3.20.0"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.15"
toml = "0.9.4"
tower-lsp = "0.20.0"
tracing = "0.1.41"
ulid = "1.2.1"
url = "2.5.4"
zstd = "0.13.3"

[lints]
workspace = true
