[package]
name = "brioche-test-support"
version = "0.1.6"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
brioche-core = { path = "../brioche-core" }
bstr = "1.12.1"
directories = "6.0.0"
futures = "0.3.31"
hex = "0.4.3"
mockito = "1.7.1"
object_store = "0.13.0"
reqwest = "0.12.25"
reqwest-middleware = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tempfile = "3.24.0"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.17"
toml = "0.9.10"
tower-lsp = "0.20.0"
tracing = "0.1.44"
ulid = "1.2.1"
url = "2.5.7"
zstd = "0.13.3"

[lints]
workspace = true
