[package]
name = "brioche"
version = "0.1.6-rc.2"
edition.workspace = true
rust-version.workspace = true
default-run = "brioche"

[features]
default = ["self-update"]
self-update = []

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
async-compression = { version = "0.4.32", features = [
    "xz",
] }
brioche-core = { path = "../brioche-core" }
bstr = "1.12.0"
cfg-if = "1.0.4"
clap = { version = "4.5.50", features = ["derive"] }
csv = "1.4.0"
futures = "0.3.31"
hex = "0.4.3"
notify = "8.2.0"
object_store = "0.12.4"
openssl = { version = "0.10.74", optional = true }
reqwest = { version = "0.12.24", default-features = false, features = [
    "rustls-tls",
    "zstd",
    "json",
] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
ssh-key = { version = "0.7.0-rc.3", default-features = false, features = ["std", "ed25519"] }
superconsole = "0.2.0"
tar = "0.4.44"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
tokio-util = "0.7.16"
tower-lsp = "0.20.0"
tracing = "0.1.41"
ulid = "1.2.1"
url = { version = "2.5.4", features = ["serde"] }
zstd-framed = { version = "0.1.1", features = ["tokio"] }

[lints]
workspace = true
