[package]
name = "brioche"
version = "0.1.6"
edition.workspace = true
rust-version.workspace = true
default-run = "brioche"

[features]
default = ["self-update"]
self-update = []

[dependencies]
anyhow = { version = "1.0.101", features = ["backtrace"] }
async-compression = { version = "0.4.39", features = [
    "xz",
] }
brioche-core = { path = "../brioche-core" }
bstr = "1.12.1"
cfg-if = "1.0.4"
clap = { version = "4.5.58", features = ["derive"] }
csv = "1.4.0"
futures = "0.3.32"
hex = "0.4.3"
notify = "8.2.0"
object_store = "0.13.1"
openssl = { version = "0.10.75", optional = true }
reqwest = { version = "0.13.2", default-features = false, features = [
    "http2",
    "rustls",
    "zstd",
    "json",
] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0-rc.5"
ssh-key = { version = "0.7.0-rc.8", default-features = false, features = ["std", "ed25519"] }
superconsole = "0.2.0"
tar = "0.4.44"
tokio = { version = "1.49.0", features = ["full", "tracing"] }
tokio-util = "0.7.18"
tower-lsp = "0.20.0"
tracing = "0.1.44"
ulid = "1.2.1"
url = { version = "2.5.8", features = ["serde"] }
zstd-framed = { version = "0.1.1", features = ["tokio"] }

[lints]
workspace = true
